--- a/deRoquemaurelAntoine_siaweb_folksonomies/folksonomies/style/css/style.css
+++ b/deRoquemaurelAntoine_siaweb_folksonomies/folksonomies/style/css/style.css
@@ -1,15 +1,19 @@
-/* Affichage du nuage de tag */
+.addDocument{
+/*	width: 500px;*/
+	margin: auto;
+}
+
 #cloudWords {
 	width: 90%;
 	text-align: center;
 	margin: auto;
 }
+
 .keyword {
 	display: inline-block;
 	margin-top: 30px;
 }
 
-/* Champ de recherche */
 #searchField {
 	margin-top:10px; 
 	margin-bottom: -10px;
